--- a/samples/Sample.EncodeRoute/App.config
+++ b/samples/Sample.EncodeRoute/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -7,20 +10,16 @@
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="GeoAPI" publicKeyToken="a1a0da7def465678" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.7.4.0" newVersion="1.7.4.0" />
+        <assemblyIdentity name="NetTopologySuite.IO.GeoTools" publicKeyToken="f580a05016ebada1" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.14.0.0" newVersion="1.14.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NetTopologySuite" publicKeyToken="f580a05016ebada1" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.14.0.0" newVersion="1.14.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NetTopologySuite.IO.GeoTools" publicKeyToken="f580a05016ebada1" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.14.0.0" newVersion="1.14.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="NetTopologySuite.IO.ShapeFile" publicKeyToken="f580a05016ebada1" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.13.3.0" newVersion="1.13.3.0" />
+        <assemblyIdentity name="GeoAPI" publicKeyToken="a1a0da7def465678" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.7.4.0" newVersion="1.7.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
