--- a/OpenLR.Tests.Functional/packages.config
+++ b/OpenLR.Tests.Functional/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GeoAPI" version="1.7.4" targetFramework="net452" />
-  <package id="Itinero" version="0.23.1-rc1" targetFramework="net452" />
-  <package id="Itinero.Geo" version="0.23.1-rc1" targetFramework="net452" />
-  <package id="Itinero.IO.Shape" version="0.23.1-rc1" targetFramework="net452" />
+  <package id="Itinero" version="0.25.1-rc1" targetFramework="net452" />
+  <package id="Itinero.Geo" version="0.25.1-rc1" targetFramework="net452" />
+  <package id="Itinero.IO.Shape" version="0.25.1-rc1" targetFramework="net452" />
   <package id="NetTopologySuite" version="1.14" targetFramework="net452" />
   <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="net452" />
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
-  <package id="Reminiscence" version="1.0.5-rc1" targetFramework="net452" />
+  <package id="Reminiscence" version="1.0.5" targetFramework="net452" />
 </packages>
