--- a/samples/Samples.OSM/packages.config
+++ b/samples/Samples.OSM/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GeoAPI" version="1.7.4" targetFramework="net452" />
-  <package id="Itinero" version="0.30.0-rc1" targetFramework="net452" />
-  <package id="Itinero.Geo" version="0.30.0-rc1" targetFramework="net452" />
-  <package id="Itinero.IO.Osm" version="0.30.0-rc1" targetFramework="net452" />
+  <package id="Itinero" version="0.35.2-rc1" targetFramework="net452" />
+  <package id="Itinero.Geo" version="0.35.2-rc1" targetFramework="net452" />
+  <package id="Itinero.IO.Osm" version="0.35.2-rc1" targetFramework="net452" />
   <package id="NetTopologySuite" version="1.14" targetFramework="net452" />
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="OsmSharp" version="5.0.2-rc1" targetFramework="net452" />
+  <package id="OsmSharp" version="5.0.6" targetFramework="net452" />
   <package id="OsmSharp.Core" version="2.2.11-beta" targetFramework="net452" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net452" />
   <package id="Reminiscence" version="1.0.5" targetFramework="net452" />
