--- a/samples/Samples.NWB/Samples.NWB.csproj
+++ b/samples/Samples.NWB/Samples.NWB.csproj
@@ -101,7 +101,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
-    <Compile Include="NWBCar.cs" />
     <Compile Include="NWBCoderProfile.cs" />
     <Compile Include="Download.cs" />
     <Compile Include="Program.cs" />
@@ -109,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="car.lua">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
