--- a/OpenLR.Tests/packages.config
+++ b/OpenLR.Tests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GeoAPI" version="1.7.4" targetFramework="net45" />
-  <package id="Itinero" version="0.35.2-rc1" targetFramework="net45" />
-  <package id="Itinero.Geo" version="0.35.2-rc1" targetFramework="net45" />
+  <package id="Itinero" version="1.0.4" targetFramework="net45" />
+  <package id="Itinero.Geo" version="1.0.4" targetFramework="net45" />
   <package id="NetTopologySuite" version="1.14" targetFramework="net45" />
   <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="net45" />
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="net45" />
