--- a/samples/Samples.EncodeRoute/packages.config
+++ b/samples/Samples.EncodeRoute/packages.config
@@ -8,6 +8,7 @@
   <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="net452" />
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="OsmSharp" version="5.0.7" targetFramework="net452" />
   <package id="OsmSharp.Core" version="2.2.11-beta" targetFramework="net452" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net452" />
   <package id="Reminiscence" version="1.0.5" targetFramework="net452" />
