--- a/OpenLR.Geo/packages.config
+++ b/OpenLR.Geo/packages.config
@@ -4,5 +4,7 @@
   <package id="Itinero" version="1.0.5" targetFramework="portable40-net45+sl5+win8+wp8" />
   <package id="Itinero.Geo" version="1.0.5" targetFramework="portable40-net45+sl5+win8+wp8" />
   <package id="NetTopologySuite" version="1.14" targetFramework="portable40-net45+sl5+win8+wp8" />
+  <package id="OsmSharp" version="5.0.7" targetFramework="portable40-net45+sl5+win8+wp8" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="portable40-net45+sl5+win8+wp8" />
   <package id="Reminiscence" version="1.0.5" targetFramework="portable40-net45+sl5+win8+wp8" />
 </packages>
