--- a/OpenLR.Tests.Functional/OpenLR.Tests.Functional.csproj
+++ b/OpenLR.Tests.Functional/OpenLR.Tests.Functional.csproj
@@ -38,8 +38,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Itinero, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\routing-master\src\Itinero\bin\Release\net45\Itinero.dll</HintPath>
+      <HintPath>..\packages\Itinero.1.0.5\lib\net45\Itinero.dll</HintPath>
     </Reference>
     <Reference Include="Itinero.Geo, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Itinero.Geo.1.0.5\lib\net45\Itinero.Geo.dll</HintPath>
@@ -87,9 +86,15 @@
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="OsmSharp, Version=5.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\OsmSharp.5.0.7\lib\net45\OsmSharp.dll</HintPath>
+    </Reference>
     <Reference Include="PowerCollections, Version=1.0.0.0, Culture=neutral, PublicKeyToken=2573bf8a1bdddcd5, processorArchitecture=MSIL">
       <HintPath>..\packages\NetTopologySuite.1.14\lib\net45\PowerCollections.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
+      <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="Reminiscence, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Reminiscence.1.0.5\lib\net45\Reminiscence.dll</HintPath>
