--- a/OpenLR.Tests/packages.config
+++ b/OpenLR.Tests/packages.config
@@ -8,5 +8,7 @@
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="OsmSharp" version="5.0.7" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
   <package id="Reminiscence" version="1.0.5" targetFramework="net45" />
 </packages>
