--- a/samples/Samples.EncodeRoute/Samples.EncodeRoute.csproj
+++ b/samples/Samples.EncodeRoute/Samples.EncodeRoute.csproj
@@ -82,9 +82,8 @@
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="OsmSharp, Version=2.2.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\OsmSharp.Core.2.2.11-beta\lib\net45\OsmSharp.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="OsmSharp, Version=5.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\OsmSharp.5.0.7\lib\net45\OsmSharp.dll</HintPath>
     </Reference>
     <Reference Include="PowerCollections, Version=1.0.0.0, Culture=neutral, PublicKeyToken=2573bf8a1bdddcd5, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NetTopologySuite.1.14\lib\net45\PowerCollections.dll</HintPath>
