Added test runner project.

--- a/test/OpenLR.Test/OpenLR.Test.csproj
+++ b/test/OpenLR.Test/OpenLR.Test.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net45</TargetFramework>
-    <AssemblyName>Itinero.Test</AssemblyName>
-    <PackageId>Itinero.Test</PackageId>
+    <AssemblyName>OpenLR.Test</AssemblyName>
+    <PackageId>OpenLR.Test</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
