Copy car.lua to output in NWB sample.

--- a/samples/Samples.NWB/Samples.NWB.csproj
+++ b/samples/Samples.NWB/Samples.NWB.csproj
@@ -50,4 +50,10 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="car.lua">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
