Updated packages, removed encode route sample and added edge encoding extension.

--- a/nuspec/OpenLR.Geo.nuspec
+++ b/nuspec/OpenLR.Geo.nuspec
@@ -13,16 +13,16 @@
     <iconUrl>http://www.itinero.tech/logos/openlr_logo64.png</iconUrl>
     <dependencies>
       <group targetFramework=".NETFramework4.0">
-        <dependency id="OpenLR" version="1.0.0" exclude="Build,Analyzers" />
+        <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
         <dependency id="GeoAPI" version="1.7.4" exclude="Build,Analyzers" />
         <dependency id="NetTopologySuite" version="1.14.0" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.1.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.3.1" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.5.1">
-        <dependency id="OpenLR" version="1.0.0" exclude="Build,Analyzers" />
+        <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
         <dependency id="GeoAPI" version="1.7.4" exclude="Build,Analyzers" />
         <dependency id="NetTopologySuite" version="1.14.0" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.1.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.3.1" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
