--- a/src/OpenLR.Geo/OpenLR.Geo.csproj
+++ b/src/OpenLR.Geo/OpenLR.Geo.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net40;net451</TargetFrameworks>
+    <TargetFrameworks>;net40;net451</TargetFrameworks>
     <AssemblyName>OpenLR.Geo</AssemblyName>
     <PackageId>OpenLR.Geo</PackageId>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
