--- a/nuspec/OpenLR.Geo.nuspec
+++ b/nuspec/OpenLR.Geo.nuspec
@@ -14,20 +14,21 @@
     <dependencies>
       <group targetFramework=".NETFramework4.0">
         <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="GeoAPI" version="1.7.4" exclude="Build,Analyzers" />
-        <dependency id="NetTopologySuite" version="1.14.0" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.3.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.4.0-pre18" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.5.1">
         <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="GeoAPI" version="1.7.4" exclude="Build,Analyzers" />
-        <dependency id="NetTopologySuite" version="1.14.0" exclude="Build,Analyzers" />
-        <dependency id="Itinero.Geo" version="1.3.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.4.0-pre18" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework=".NETStandard1.3">
+        <dependency id="OpenLR" version="$version$" exclude="Build,Analyzers" />
+        <dependency id="Itinero.Geo" version="1.4.0-pre18" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <file src="src\OpenLR.Geo\bin\Release\net40\OpenLR.Geo.dll" target="lib\net40\OpenLR.Geo.dll" />
     <file src="src\OpenLR.Geo\bin\Release\net451\OpenLR.Geo.dll" target="lib\net451\OpenLR.Geo.dll" />
+    <file src="src\OpenLR.Geo\bin\Release\netstandard1.3\OpenLR.Geo.dll" target="lib\netstandard1.3\OpenLR.Geo.dll" />
   </files>
 </package>
