--- a/nuspec/OpenLR.nuspec
+++ b/nuspec/OpenLR.nuspec
@@ -13,17 +13,17 @@
     <iconUrl>http://www.itinero.tech/logos/openlr_logo64.png</iconUrl>
     <dependencies>
       <group targetFramework=".NETFramework4.5">
-        <dependency id="Itinero" version="1.3.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero" version="1.4.0-pre18" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.0">
-        <dependency id="Itinero" version="1.3.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero" version="1.4.0-pre18" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.5.1">
-        <dependency id="Itinero" version="1.3.1" exclude="Build,Analyzers" />
+        <dependency id="Itinero" version="1.4.0-pre18" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETStandard1.3">
-        <dependency id="Itinero" version="1.3.1" exclude="Build,Analyzers" />
-        <dependency id="NETStandard.Library" version="1.6.0" exclude="Build,Analyzers" />
+        <dependency id="Itinero" version="1.4.0-pre18" exclude="Build,Analyzers" />
+        <dependency id="NETStandard.Library" version="1.6.1" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
