--- a/src/OpenLR.Geo/OpenLR.Geo.csproj
+++ b/src/OpenLR.Geo/OpenLR.Geo.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>;net40;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;net40;net451</TargetFrameworks>
     <AssemblyName>OpenLR.Geo</AssemblyName>
     <PackageId>OpenLR.Geo</PackageId>
-    <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
+    <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -17,9 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GeoAPI" Version="1.7.4" />
-    <PackageReference Include="Itinero.Geo" Version="1.3.1" />
-    <PackageReference Include="NetTopologySuite" Version="1.14.0" />
+    <PackageReference Include="Itinero.Geo" Version="1.4.0-pre18" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
