--- a/test/OpenLR.Test.Functional/OpenLR.Test.Functional.csproj
+++ b/test/OpenLR.Test.Functional/OpenLR.Test.Functional.csproj
@@ -32,10 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Itinero.IO.Osm" Version="1.3.1" />
-    <PackageReference Include="Itinero.IO.Shape" Version="1.3.1" />
-    <PackageReference Include="NetTopologySuite.IO" Version="1.14.0.1" />
-    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.14.0" />
+    <PackageReference Include="Itinero.IO.Osm" Version="1.4.0-pre18" />
+    <PackageReference Include="Itinero.IO.Shape" Version="1.4.0-pre18" />
+    <PackageReference Include="NetTopologySuite.IO" Version="1.15.0-pre032" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.15.0-pre032" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="NUnit" Version="3.4.1" />
     <PackageReference Include="dotnet-test-nunit" Version="3.4.0-beta-2" />
