--- a/test/OpenLR.Test/OpenLR.Test.csproj
+++ b/test/OpenLR.Test/OpenLR.Test.csproj
@@ -25,10 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Itinero" Version="1.3.1" />
-    <PackageReference Include="NetTopologySuite" Version="1.14.0" />
-    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.14.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="7.0.1" />
+    <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.15.0-pre032" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="NUnit" Version="3.6.1" />
   </ItemGroup>
 
